# BlankApp

./: .gitignore  .gitmodules  App.cpp  App.h  App.idl  App.xaml  BlankApp.sln  BlankApp.vcxproj  BlankApp.vcxproj.filters  BlankApp_TemporaryKey.pfx  CMakeLists.txt  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  README.md  module.g.cpp  readme.txt
Generated Files/: App.xaml.g.h  MainPage.xaml.g.h  XamlBindingInfo.xaml.g.h
scripts/: build.py  cppwinrt.py
